--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "random-number": "0.0.7"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.12",
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-sass": "^3.1.0"
+    "gulp-concat": "^2.6.1"
   }
 }
