--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Solución del Proyeto final del Sprint 5 - Yape!",
   "main": "server.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "gh-pages": "^1.0.0",
     "level": "^1.7.0",
     "leveldown": "^1.7.2",
     "levelup": "^1.3.8",
@@ -21,5 +26,6 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1"
-  }
+  },
+  "homepage": "https://gabylutrejo.github.io/yape/"
 }
